# logifix

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Example.java  LICENSE  LICENSE.txt  Makefile  README.md  ast.dl  functors.cpp  logifix.cpp  logifix.h  nodes.dl  pretty-print.dl  program.cpp  program.dl  program.hpp  repair.cpp  repair.dl  repair.h  repair.hpp  rules.md  squarelog.cpp  squarelog.h  transformations.md
.github/: colorscheme.yml
.github/workflows/: build-macos.yml  build-ubuntu.yml  run-threadsanitizer.yml
cli/: main.cpp
docs/: ast-api.md  building.md  creating-your-own-analysis.md  creating-your-own-transformations.md  predefined-transformations.md
rules/: 1125.dl  1125_redundant_boolean.dl  1132.dl  1155.dl  1155_use_isempty.dl  1213.dl  1450.dl  1481.dl  1481_unused_local_variables.dl  1596.dl  1596_fix_old_empty_collection.dl  1854.dl  1862.dl  2095_close_resources.dl  2111.dl  2111_bigdecimal_double.dl  2159.dl  2204.dl  2259.dl  2272.dl  2293.dl  2293_diamond_operator.dl  2583.dl  3039.dl  3981.dl  3984.dl  3984_throw_exceptions.dl  4973.dl  4973_use_equals_method.dl  5194.dl
scripts/: create_release.sh  download_and_run_tests.sh  footer.md  generate_ast_reference.py  generate_header.sh  generate_readme.sh  generate_rule_data.sh  generate_rule_markdown.sh  generate_transformation_markdown.sh  header.md  list_rules.sh  run_test.sh  run_tests.sh  update_names.sh  verify_that_tests_compile.sh
src/: cli.cpp  config.h.in  functors.cpp  javadoc.cpp  javadoc.h  libgit.cpp  libgit.h  logifix.cpp  logifix.h  nodes.dl  program.cpp  program.dl  timer.cpp  timer.h  tty.cpp  tty.h  utils.cpp  utils.h
src/analysis/: scoping.dl  sideeffects.dl  typechecking.dl
src/cli/: cli.cpp  tty.cpp  tty.h
src/datalog/: ast.dl  constant-evaluation.dl  nodes.dl  scoping.dl  sideeffects.dl  typechecking.dl
src/parser/: javadoc.cpp  javadoc.h  lexer.re2c.cpp  parser.h  parser.yy
src/rules/: 1068_remove_unused_private_fields.dl  1116_remove_empty_statements.dl  1125_redundant_boolean.dl  1125_simplify_boolean_expressions.dl  1125_simplify_ternary_conditional_expressions.dl  1126_simplify_boolean_return.dl  1132_string_literals_left_side.dl  1153_remove_unnecessary_calls_to_string_valueof.dl  1153_remove_valueof_on_string_append.dl  1155_simplify_code_by_using_collection_isempty.dl  1155_use_isempty.dl  1161.dl  1217_dont_call_thread_run.dl  1481_unused_local_variables.dl  1488_remove_unnecessary_variable_declarations_before_return_statement.dl  1596_fix_old_empty_collection.dl  1602_lambda_single_statement.dl  1764_identical_expressions_binary_operator.dl  2095_close_resources.dl  2111_bigdecimal_double.dl  2114_dont_pass_collections_to_their_methods.dl  2121.dl  2121_fix_silly_string_operations.dl  2159_fix_silly_equality_checks.dl  2204.dl  2204_dont_compare_atomic_with_equals.dl  2225_tostring_and_clone_should_not_return_null.dl  2259_dont_dereference_null_pointers.dl  2272.dl  2272_throw_nosuchelementexception.dl  2293_diamond_operator.dl  2761_remove_repeated_unary_operators.dl  3012.dl  3065.dl  3824_replace_map_get.dl  3984_throw_exceptions.dl  4087_remove_redundant_close.dl  4635_use_string_offset_methods.dl  4973_use_equals_method.dl  data.json
src/rules/avoid_raw_types/: data.json  implementation.dl
src/rules/cosmetic/: 10000_unhoist_bang.dl  10001_remove_empty_try_statement.dl  10003_remove_empty_block.dl
src/rules/experimental/: 2272_throw_nosuchelementexception.dl  3824_replace_map_get.dl  fix_boxed_comparisons.dl
src/rules/fix_broken_null_checks/: data.json  implementation.dl
src/rules/fix_calls_to_thread_run/: data.json  implementation.dl
src/rules/fix_comparisons_of_atomic_classes/: data.json  implementation.dl
src/rules/fix_comparisons_of_objects_with_null/: data.json  implementation.dl
src/rules/fix_imprecise_calls_to_bigdecimal/: data.json  implementation.dl
src/rules/fix_inefficient_calls_to_foreach_list_add/: data.json  implementation.dl
src/rules/fix_inefficient_map_access/: data.json  implementation.dl
src/rules/fix_inefficient_use_of_stringbuilder/: implementation.dl
src/rules/fix_null_pointer_exceptions_by_changing_the_order_of_arguments_in_string_comparison/: data.json  implementation.dl
src/rules/fix_null_returns_in_tostring/: data.json  implementation.dl
src/rules/fix_potential_resource_leaks/: data.json  implementation.dl
src/rules/fix_raw_use_of_empty_collections/: data.json  implementation.dl
src/rules/fix_raw_use_of_generic_class/: data.json  implementation.dl
src/rules/fix_references_to_collections_empty_list_empty_map_and_empty_set/: data.json  implementation.dl
src/rules/fix_resource_leaks/: data.json  implementation.dl
src/rules/improve_precision_of_calls_to_bigdecimal/: data.json  implementation.dl
src/rules/provide_parameterized_type_for_generic/: data.json  implementation.dl
src/rules/provide_parameterized_types_for_generics/: data.json  implementation.dl
src/rules/remove_empty_declarations/: data.json  implementation.dl
src/rules/remove_empty_finally_block/: implementation.dl
src/rules/remove_empty_finally_blocks/: data.json  implementation.dl
src/rules/remove_empty_if_statements/: data.json  implementation.dl
src/rules/remove_empty_nested_blocks/: data.json  implementation.dl
src/rules/remove_empty_statements/: data.json  implementation.dl
src/rules/remove_empty_try_blocks/: data.json  implementation.dl
src/rules/remove_redundant_call_to_collection_addall/: data.json  implementation.dl
src/rules/remove_redundant_calls_to_close/: data.json  implementation.dl
src/rules/remove_redundant_calls_to_collection_addall/: data.json  implementation.dl
src/rules/remove_redundant_casts/: data.json  implementation.dl
test/: CMakeLists.txt
tests/: README.md  download_sources.sh  download_tests.sh  run_tests.sh  sources.csv  sources_unused.csv  tests.csv  tests_unused.csv
tests/4973_use_equals_method/: 1.java
tests/local/: run_tests.sh
tests/real_world/: README.md  download_tests.sh  run_tests.sh  tests.csv  tests_unused.csv
(+279 files in other folders)
